site/index.css
.table-wrapper {
    width: 100%;
    max-height: 400px; /* vertical scroll */
    overflow: auto;
    border: 1px solid #ccc;
}

table {
    border-collapse: collapse;
    width: 100%;
}

td, th {
    padding: 8px;
    border: 1px solid #999;
    white-space: nowrap; /* prevents text wrapping */
}

* { margin: 0; 
    padding: 0;
    }

html {
    scroll-behavior: smooth;
    }





    
/* name font */
.zilla-slab-light {
    font-family: "Zilla Slab", serif;
    font-weight: 300;
    font-style: normal;
  }


  
  .zilla-slab-regular {
    font-family: "Zilla Slab", serif;
    font-weight: 400;
    font-style: normal;
  }
  
  .zilla-slab-medium {
    font-family: "Zilla Slab", serif;
    font-weight: 500;
    font-style: normal;
  }
  
  .zilla-slab-semibold {
    font-family: "Zilla Slab", serif;
    font-weight: 600;
    font-style: normal;
  }
  
  .zilla-slab-bold {
    font-family: "Zilla Slab", serif;
    font-weight: 700;
    font-style: normal;
  }
  
  .zilla-slab-light-italic {
    font-family: "Zilla Slab", serif;
    font-weight: 300;
    font-style: italic;
  }
  
  .zilla-slab-regular-italic {
    font-family: "Zilla Slab", serif;
    font-weight: 400;
    font-style: italic;
  }
  
  .zilla-slab-medium-italic {
    font-family: "Zilla Slab", serif;
    font-weight: 500;
    font-style: italic;
  }
  
  .zilla-slab-semibold-italic {
    font-family: "Zilla Slab", serif;
    font-weight: 600;
    font-style: italic;
  }
  
  .zilla-slab-bold-italic {
    font-family: "Zilla Slab", serif;
    font-weight: 700;
    font-style: italic;
  }

.zilla{
  font-size:2.7vw;
}


/* rounded font */

.nunito-font1 {
  font-family: "Nunito", sans-serif;
  font-optical-sizing: auto;
  font-weight: 50px;
  font-style: normal;
  
}

.nunito-font1-small {
  font-family: "Nunito", sans-serif;
  font-optical-sizing: auto;
  font-weight: 40px;
  font-size:0.5vw;
}

a {
    text-decoration: none; 
    color: inherit;
  }

a:hover {
color: rgb(77, 77, 77);
text-decoration: none;
}


.sidenav {
    position: sticky;
    top: 35vh;

    height: fit-content;

    display: flex;
    flex-direction: column;
    gap: 20px;

    width: 120px;
}

.intro-top {
    min-height: 60vh;
    display: flex;
    align-items: center;
}

.content {
    display: flex;
    justify-content: center;
    gap: 80px;

    width: 100%;
}
.main-content {
    display: flex;
    flex-direction: column;
    width: 500px;
}


.section-text{
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    width: 500px;
    font-size: 16px;

}

.name-header {
    font-size:40px;
}

.sub-header {
    font-size: 20px;
    color: rgb(0, 0, 0);
    margin: 0;
    text-align: left;
}

.secondary-header{
    font-size: 30px;
    margin: 0;
    text-align: left;
}

.extra-info {
    color: rgb(144, 144, 144);
    font-size: 15px;
    margin:2px 0px 0px 0px;
    
}




.book {
    width: 120px;
    height: auto;
    
}

.experience {
    margin: 5px;
}

.experience-list{
    padding:5px;
}

ul {
    list-style-type: "> ";
}


@keyframes fadeIn {
    from { opacity: 0; }
    to { opacity: 1; }
}
.fade-in {
    animation: fadeIn 1s ease-in forwards;
}

@keyframes fadeInScroll {
    from {
        opacity: 0;
        transform: translateY(40px);
    }

    to {
        opacity: 1;
        transform: translateY(0);
  }}

.fade-scroll {
    opacity: 1;

    animation: fadeInScroll linear both;
    animation-timeline: view();
    animation-range: entry 10% cover 30%;
  }


@keyframes slide-in {
    from {
    opacity: 0;
    transform: translateX(-300px);
    }
    to {
    opacity: 1;
    transform: translateX(10%);
    }
}

.slide {
    animation: slide-in linear forwards;
    animation-timeline: view(); 
    animation-range: entry 0% cover 30%;
}

